# sl29.games.2048

./: pyproject.toml
doc/: conf.py  index.rst
src/sl29/games/: _2048.py  cli_2048.py
src/sl29/games/tests/: test_2048.py
